# phas0102-converter

./: package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  app.py  package.json  pyproject.toml  requirements.txt  run.py  vercel.json
apps/api/api/: asgi.py  colab.py  config.py  convert.py  main.py
apps/api/api/api/: deps.py
apps/api/api/api/api_v1/: api.py
apps/api/api/api/api_v1/endpoints/: jupyter.py
apps/web/: next.config.js  package.json
apps/web/app/: clientService.ts  layout.tsx  page.tsx
apps/web/components/: dropfile.tsx
apps/web/components/theme/: theme.css
apps/web/lib/: clientConfig.ts  upload.ts
apps/web/lib/api/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
apps/web/lib/api/client/client/: client.gen.ts
