[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "cording12", email = "joncording12@gmail.com" }]
requires-python = ">=3.12,<4"
packages = [{ include = "src" }]
dependencies = [
    "fastapi>=0.118.2",
    "gdown>=5.2.0",
    "gunicorn>=23.0.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=8.37.0",
    "isort>=6.1.0",
    "pylint-pydantic>=0.3.5",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
